--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -535,3 +535,7 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_TWOFISH=y
+
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ATAGS_PROC=y
