--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Screwd-r5"
+CONFIG_LOCALVERSION="-Screwd-r4-redux"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -385,7 +385,6 @@ CONFIG_BOARD_HEADER_FILE=""
 #
 # CONFIG_LGE_CRASH_HANDLER is not set
 CONFIG_MACH_ASUSTEK=y
-CONFIG_LCD_KCAL=y
 
 #
 # ASUSTek Board Selection
