You are Chopped, sir...
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

--- a/arch/arm/configs/flo_defconfig
+++ b/arch/arm/configs/flo_defconfig
@@ -542,6 +542,9 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_AES_ARM=y
 CONFIG_CRYPTO_TWOFISH=y
 
+##Custom starts here
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_ATAGS_PROC=y
+CONFIG_LOCALVERSION="-Chopped-v1"
+# CONFIG_LOCALVERSION_AUTO is not set
